--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -271,7 +271,7 @@ h1, h2, h3, h4, h5,
         color: #969696; }
       .site-navbar .site-navigation .site-menu > li > a {
         padding: 20px 20px;
-        color: #000;
+        color: white;
         display: inline-block;
         text-decoration: none !important; }
         .site-navbar .site-navigation .site-menu > li > a:hover {
