--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -272,6 +272,7 @@ h1, h2, h3, h4, h5,
       .site-navbar .site-navigation .site-menu > li > a {
         padding: 20px 20px;
         color: white;
+        text-shadow: 2px 2px 4px black;
         display: inline-block;
         text-decoration: none !important; }
         .site-navbar .site-navigation .site-menu > li > a:hover {
